Tue Aug 27 11:09:28 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/convert.c:
	- fixed some possible buffer overflow
	- added some FIXME comment

Tue Aug 27 02:38:16 EDT 2002	JK Lowden <jklowden@schemamania.org>
	* src/tds/convert.c	Error messages (tds_client_msg) from tds_convert
	* src/tds/token.c	don't write to null socket's state in tds_client_msg
	* src/dblib/dblib.c	fix vasprintf prototype; extend dbprtype
Mon Aug 26 22:04:23 CEST 2002   Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/convert.c src/tds/unittests/t0007.c:
	- add conversion from char to unique
	* src/tds/token.c:
	- print also hexadecimal value for unknown marker

Mon Aug 26 17:40:28 CEST 2002   Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/iconv.c:
	- compile if iconv not present

Mon Aug 26 16:17:12 CEST 2002   Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/convert.c:
	- add comment for not add 0x for binary->char conversions

Sun Aug 25 09:34:34 CEST 2002   Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/iconv.c:
	- best conversion from unicode, replace wrong characters with '?'
	  (both iconv and C code)
	- do not return garbage data
	* src/tds/mem.c:
	- init iconv cd to -1 to avoid possible wrong iconv_close calls

Fri Aug 23 21:35:19 CEST 2002   Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h.in include/tdsconvert.h src/ctlib/ct.c:
	* src/ctlib/ctutil.c src/dblib/bcp.c src/dblib/dblib.c:
	* src/tds/convert.c src/tds/query.c:
	- other minor cleanup

Fri Aug 23 15:08:49 CEST 2002   Frediano Ziglio <freddy77@angelfire.com>
	* include/tdsconvert.h include/tdsutil.h src/ctlib/ct.c:
	* src/dblib/dblib.c src/tds/asprintf.c src/tds/config.c:
	* src/tds/convert.c src/tds/locale.c src/tds/login.c:
	* src/tds/read.c src/tds/token.c:
	- removed some warning

Thu Aug 22 21:06:01 CEST 2002   Frediano Ziglio <freddy77@angelfire.com>
	(patches from castellano)
	* configure.in:
	- small problem testing for gethostbyaddr function
	* src/tds/config.c: